kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mediathekview
---
apiVersion: v1
kind: Service
metadata:
  name: filmlistmerger-metrics
  namespace: mediathekview

spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
    - name: http
      protocol: TCP
      port: 8086
  selector:
    app: metrics
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: mediathekview
  name: filmlistmerger-metrics
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
        - name: influx
          image: influxdb:alpine
          ports:
            - containerPort: 8086
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: filmlistmerger-metrics-grafana-claim
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: mediathekview
  name: filmlistmerger
  labels:
    app: filmlistmerger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filmlistmerger
  template:
    metadata:
      labels:
        app: filmlistmerger
    spec:
      containers:
        - name: filmlistmerger-database
          image: postgres
          args:
           - -c
           - max_connections=515
          volumeMounts:
            - mountPath: /dev/shm
              name: shared-memory
            - mountPath: /data
              name: filmlist-database
        - name: filmlistmerger
          image: mediathekview/filmlistmerger:0.0.1-SNAPSHOT
          volumeMounts:
            - name: filmlist-input
              mountPath: /workspace/input
            - name: filmlist-output
              mountPath: /workspace/output
          imagePullPolicy: Always
      volumes:
        - name: filmlist-input
          persistentVolumeClaim:
            claimName: filmlistmerger-inputfiles-claim
        - name: filmlist-database
          persistentVolumeClaim:
            claimName: filmlistmerger-database-claim
        - name: filmlist-output
          emptyDir: { }
        - name: shared-memory
          emptyDir: { }
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: filmlistmerger-metrics-ingress
  namespace: mediathekview

spec:
  rules:
    - host: metrics.filmlistmerger.mediathekview.de
      http:
        paths:
          - path: /
            backend:
              serviceName: filmlistmerger-metrics
              servicePort: 3000
